--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -197,7 +197,7 @@ $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated ba
 
 This balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. During $gs$, evapotranspiration facilitates heat dissipation. But when leaf water demand exceeds water transport, driven by irradiance, $T_{air}$, $VPD$ or drought, conservation of water ($gs$ limitation) occurs at the cost of increasing $T_{leaf}$ [@fauset_differences_2018].
 
-Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ similar to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020].
+Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @pauTropicalForestTemperature2018].
 
 High wind speed (Fig. `r fig_NEON_vertical`) decreases $T_{leaf}$ - $T_{air}$ due to large boundary layer conductance ($g_a$)  [@daudetWindSpeedLeaf1999a]. Therefore, under hot conditions, high wind speeds and high $g_s$ would enable cooling but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, limiting $g_a$ and increasing $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]
 
@@ -208,19 +208,16 @@ Leaf interiors are $RH$ saturated [@buckleyHumidityLeavesWhy2019], hence when at
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
  Inherent leaf $gs$ is generally greater across species exposed sun-leaves due to stomata density than shade leaves [Table 1]. However, because factors driving $g_s$ limitation--irradiance, $VPD$ and $T_{air}$--increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, driving an increase in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020].
 
-Lastly, canopy structure and architecture also influence canopy temperature  [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
+Lastly, canopy structure and architecture adaptation can also influence canopy temperature  [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
 
 ### In-situ observations
 **The principles outlined above, vertical microclimate profile (Fig. `r fig_NEON_vertical`) and leaf traits (see following section) together shape in-situ $T_{leaf}$ observations (Fig. `r fig_leaf_T`).** 
 In open forests with lower buffering capacity, lower-canopy $T_{leaf}$ is greater than upper canopy, due to vertical air mixing, greater light permeability, still air in the lower canopy and heating from the ground can collectively increase $T_{leaf}$ [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. Similarly, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
 Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more than upper-canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
-Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
+Under other conditions $T_{leaf}$ tracks $T_{air}$, due to high evapotranspiration and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** 
-Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies from $gs$ limitation, than buffered lower-canopies [@doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016]. 
-Greater light input in exposed upper-canopy leaves can sometimes increase $T_{leaf_{max}}$ beyond temperature optimum for photosynthesis ($T_{opt}$) and $T_{air}$, making upper-canopies highly susceptible to heat stress [@doughtyAreTropicalForests2008; @mauTemperateTropicalForest2018a]. 
-Comparing forests, upper canopies of temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a]. At a specie-specific level, leaf boundary resistance is lower for confiers than broad-leaf trees, followed by higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies[@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018].
-
+Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optimum for photosynthesis ($T_{opt}$) and $T_{air}$, from $gs$ limitation and irradiance [@doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. Comparing forests, upper canopies of temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than the upper canopies of tropical moist and wet forest species [@mauTemperateTropicalForest2018a] and sparse canopies[@mauTemperateTropicalForest2018a; @leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018] . At a specie-specific level, leaf boundary resistance is lower for confiers than broad-leaf trees, followed by higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies[@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. Spatial distribution of canopy temperature also shows that tropical tree barks can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
 
 ## Leaf traits 
 
@@ -353,16 +350,16 @@ Vertical gradients in the biophysical environment shape which plant strategies, 
 **Vertical gradients affect tree recruitment, growth and survival, and how these respond to climatic variation.**
 More interesting in this context is how these shape differences in the climatic sensitivity of growth and mortality. There are numerous demographic differences between understory and canopy trees, which have been linked to both the physical environment and plant traits (e.g., REFS), *and we will not review those here.* *(although maybe we should put one paragraph?)*
 
-Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011] .Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. However, soil water loss during drought effects larger trees more than small trees because, limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate].
+Biophysically, greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Accordingly, heat, associated with increase in temperature and VPD even under adequete water can cause greater tree hydraulic stress and altered and soil-water dynamics than milder drought, due to increased $T_{leaf}$ and $gs$ limitation [@ruehrWaterAvailabilityDominant2016].  However, soil water loss during drought effects larger trees more than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [Norway spruce study, bennett; @mcgregor_tree_nodate]. Further, heat with drought exacerbates tree stress [@ruehrWaterAvailabilityDominant2016]. 
 
-Additionally, understory growth can be more sensitive to annual warming than canopy, showing earlier spring onset and later autumn senescense, particularly in temperate-deciduous forests [Zohnner and Renner, 2019]. Increase in summer temperature in mesic temperate forests is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves in temperate forests can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014].
+Phenologically, understory growth can be more sensitive to annual warming than canopy in temperate-deciduous forests, showing earlier spring onset and later autumn senescense [Zohnner and Renner, 2019]. Increase in summer temperature in mesic temperate forests is also associated with reduced forest carbon storage [@oishiWarmerTemperaturesReduce2018]. However, late spring, short-term heat waves in temperate forests can negatively impact partially-expanded canopy leaves more than understory saplings that are buffered, by inducing leaf shedding and decreasing photosynthesis and C uptake in reflushed leaves [@filewodImpactsSpringHeat2014]. Whereas, greater $RH$ can do the opposite, where it stifles evapotranspiration thereby increasing $T_{leaf}$, particularly in tropical canopies where irradiance can have a greater effect [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. .
 
 **There is also recently emerging evidence that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
 However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
-It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. Similarly, in tropical forests, decelarating tree growth rates predominantly in smaller trees, but not restricted to, have also been observed due to local climate patterns of mean daily minimum temperature, increasing temperature and rainfall regime, but exact reasons remain unresolved  [Feeley et al. 2007]. Further, interacting biophysical and biological stressors also show that stress sensitivity and ability to tolerate number of stressors increases with height, light and water. Partly because NSC reserves are greater in taller trees due to available light than in buffered trees that are light and NSC limited, therefore making buffered small trees more sensitive to stress [@niinemetsResponsesForestTrees2010a].
-In other, cases warming is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]
+It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. Similarly, in tropical forests, decelarating tree growth rates predominantly in smaller trees, but not restricted to, are associated with higher nighttime temperatures and change in rain regimes [*Clark 2010; 2013; Feeley et al. 2007*]. Further, interacting biophysical and biological stressors also show that stress sensitivity and ability to tolerate number of stressors increases with height, light and water. Partly because NSC reserves are greater in taller trees due to available light than in buffered trees that are light and NSC limited, therefore making buffered small trees more sensitive to stress [@niinemetsResponsesForestTrees2010a].
+In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]
 
 *In this section we could perhaps also consider differences in biomass distribution between canopy trees an understory plants, and what that may mean for performance at high temperature. What I'm thinking is the temperature sensitivity of respiration that applies to leaves, stems, and roots, and even though thermal acclimation of leaf respiration is common, much less is known about acclimation of stem and root respiration, and incomplete acclimation still increases the respiration load at higher temperature. It is possible that an increased respiration load is more disadvantageous for understory plants because 1), I suspect that a greater fraction of their total biomass is life biomass that respires (as opposed dead heartwood in the stems of big trees), and 2), because they operate closer to their light compensation point, so if they lose more carbon in respiration, they would need  to make up for lost carbon in photosynthesis, but might lack sunlight to do so*
 
@@ -395,8 +392,10 @@ The complex interactions of the biophysical environment and biological--leaf tra
 ### canopy disturbance
 
 
-Canopy buffering is crucial to microclimate functioning, which is influenced by hydrological-cycle at large [Davis et al. 2019]. Frequent droughts can thus cause canopy disturbances.While less severe drought can decrease tree canopy circumference [@aussenacInteractionsForestStands2000a], more severe droughts show increasing larger tree mortality in forests globally [@senfCanopyMortalityHas2018a; @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Hydraulic limitation in forests can also alters species thermoregulation [@sastry_leaf_2018]. Particularly, increasing temperatures shows increase in canopy $T_{leaf}$ above ambient temperature, and sometimes beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019].  Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Recent adavances in canopy studies further show large loss of canopies in Europe caused by wind-induced disturbance and anthropogenic deforestation [Cornelius Senf, 2021; @senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020]. Loss of big trees (e.g.@senfCanopyMortalityHas2018a ) would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity and composition which changes understory species composition and soil fertility [*@majasalmiImpactTreeCanopy2020*].Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
-Tropical forests are narrower thermal limits [@corlettImpactsWarmingTropical2011].
+Canopy buffering is crucial to microclimate functioning, which is influenced by hydrological-cycle at large [Davis et al. 2019]. Frequent droughts can thus cause canopy disturbances.While less severe drought can decrease tree canopy circumference [@aussenacInteractionsForestStands2000a], more severe droughts show increasing larger tree mortality in forests globally [@senfCanopyMortalityHas2018a; @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Hydraulic limitation in forests can also alters species thermoregulation [@sastry_leaf_2018]. Particularly, increasing temperatures shows increase in canopy $T_{leaf}$ above ambient temperature, and sometimes beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. 
+
+Increase in canopy temperature is also associated with GPP reduction in the tropics. Tropical forests are narrower thermal limits [@corlettImpactsWarmingTropical2011]. Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Recent adavances in canopy studies further show large loss of canopies in Europe caused by wind-induced disturbance and anthropogenic deforestation [Cornelius Senf, 2021; @senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020]. Loss of big trees (e.g.@senfCanopyMortalityHas2018a ) would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity and composition which changes understory species composition and soil fertility [*@majasalmiImpactTreeCanopy2020*].Leading to altered biophysical gradient with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
+
 ### warming
 
 While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to fauna in microrefugias [@scheffersMicrohabitatsReduceAnimal2013]. Heatwave and temperature  can alter understory tree grwoth rates, canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019]. At a leaf metabolism level, fluxnet global data analysis shows that with temperature increase, foliage photosynthesis and respiration are coupled at different rates upto photosynthetic thermal optimum, beyond this inflection point, photosynthesis declines whereas respiration increases exponentially, therfore, moving from carbon sink to carbon source, independent of water and irradiance [@duffyHowCloseAre2021].
